dropdown send data success

--- a/src/assets/scss/_app.variables.scss
+++ b/src/assets/scss/_app.variables.scss
@@ -8,7 +8,7 @@ $secondary:         		#82b1ff !default;
 $success: 					#00D014 !default;
 $info: 						#00D0BD !default;
 $warning: 					#FFB70F !default;
-$danger: 					#FF3739 !default;
+$danger: 					#e4002b !default;
 $pink:                  #FA0055 !default;
 $blue:                  #2E62FF !default;
 $purple:                #2B314A !default;
