açık kapalı tv sayıları düzenlendi

--- a/src/assets/scss/_app.variables.scss
+++ b/src/assets/scss/_app.variables.scss
@@ -3,9 +3,9 @@
 $html-font-size:              16px;
 
 //App Background Scale
-$primary: 					#5D92F4 !default;
+$primary: 					lightgray !default;//#5D92F4 !default;
 $secondary:         		#82b1ff !default;
-$success: 					#00D014 !default;
+$success: 					#0f9c0e !default;//#00D014 !default;
 $info: 						#00D0BD !default;
 $warning: 					#FFB70F !default;
 $danger: 					#e4002b !default;
